<resources>
    <string name="app_name" translatable="false">FutFanTracker</string>
    <string name="email" translatable="false">Email: lucasjprn@hotmail.com</string>
    <string name="x_valor" translatable="false">" X "</string>
    <string name="x" translatable="false">X</string>
    <string name="cadastrar_partida">New Match</string>
    <string name="data">Date</string>
    <string name="horario">Time</string>
    <string name="adversario">Opponent</string>
    <string name="local">Place</string>
    <string name="casa">Home</string>
    <string name="fora">Away</string>
    <string name="salvar">Save</string>
    <string name="limpar">Clear</string>
    <string name="acompanhei_partida">Watched the Match</string>
    <string name="os_campos_foram_limpos">All entries were cleaned</string>
    <string name="por_favor_preencha_o_adversario">Opponent cannot be empty</string>
    <string name="por_favor_preencha_uma_data_valida">Please insert a valid Date</string>
    <string name="por_favor_insira_um_horario_valido">Please insert a valid time</string>
    <string name="hint_data" translatable="false">Ex: 01/01/2001</string>
    <string name="hint_horario" translatable="false">Ex: 12:00</string>
    <string name="por_favor_preencha_o_local_adequadamente">Please select match place</string>
    <string name="data_valor">"Date: "</string>
    <string name="horario_valor">"Time: "</string>
    <string name="acompanhei_a_partida">I Watched the Match</string>
    <string name="local_valor">"Place: "</string>
    <string name="adversario_valor">"Opponent: "</string>
    <string name="nao_acompanhei_a_partida">Did not watch the match</string>
    <string name="competicao">Tournament</string>
    <string name="copa_sulamericana">Sulamericana Cup</string>
    <string name="copa_libertadores">Libertadores Cup</string>
    <string name="copa_do_brasil">Brazil National Cup</string>
    <string name="campeonato_brasileiro">Brazil National League</string>
    <string name="campeonato_estadual">Regional Tournament</string>
    <string name="competicao_valor">"Tournament: "</string>
    <string name="sobre_a_partida">About the Match</string>
    <string name="resultado">Score</string>
    <string name="por_favor_insira_o_resultado_adequadamente">Please input match score accordingly</string>
    <string name="placar_valor">"Score: "</string>
    <string name="sobre">About</string>
    <string name="descricao_app">This app helps you to track your favorite team matches</string>
    <string name="editar">Edit</string>
    <string name="excluir">Delete</string>
    <string name="editar_partida">Edit Match</string>
    <string name="sugerir_competicao">Tournament Suggestion</string>
    <string name="ordenacao">Listing Order</string>
    <string name="restaurar_padroes">Restore Default Settings</string>
    <string name="as_configuracoes_foram_restauradas_ao_padrao">Settings were restored to default</string>
    <string name="partidas">Matches</string>
    <string name="autor">Author: Lucas Silva Araújo</string>
    <string name="adicionar">Add</string>
    <string name="sobre_descricao">FutFanTracker Android App - Java Course UTFPR</string>
    <string name="o_spinner_competicoes_nao_possui_valores">Tournament Spinner is empty</string>
    <string name="partida_ja_ocorreu">Match already happened</string>
    <string name="partida_ainda_nao_ocorreu">Match has not taken place yet</string>
    <string name="aviso">Warning</string>
    <string name="ok" translatable="false">OK</string>
    <string name="confirmation">Confirmation</string>
    <string name="do_you_want_to_delete_the_match_with">Do you want to delete the match with \"</string>
    <string name="do_you_want_to_restore_default_settings">Do you want to restore default settings ?</string>
    <string name="undo">Undo</string>
    <string name="data_update_done">Data update done</string>
    <string name="error_trying_to_insert">Error trying to insert</string>
    <string name="error_trying_to_update">Error trying to update</string>
    <string name="error_trying_to_delete">Error trying to delete</string>
</resources>